# safer

./: .clang-tidy  CMakeLists.txt  README.md  conanfile.txt
include/: safer.hpp
src/: CMakeLists.txt  config.h.in  safer.cpp  table.cpp
test/: CMakeLists.txt  main.cpp
